[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
