[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
futures-util = "0.3.30"
rust_decimal = "1.33.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
